# dev-ops-open-meteo

./: .dockerignore  .env.example  .gitignore  ContainerFile  LICENSE  Makefile  PLANO_IMPLEMENTAÇÃO.md  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: cities.yaml
docs/: ambiente.md  architecture.md  troubleshooting.md
docs/adr/: 0001-open-meteo-como-fonte-de-dados.md  0002-arquitetura-raw-processed-e-postgres.md  0003-pandera-para-data-quality.md  0004-mlflow-e-kind-para-mlops-e-operacao-local.md  0005-job-sincrono-para-ingestao-open-meteo.md  0006-fixtures-versionadas-para-transformacao-e-qualidade.md  0007-database-dedicada-open-meteo.md  0008-modelo-local-com-mlflow-e-serving-fastapi.md  0009-kind-para-deploy-local-da-api.md  0010-fixtures-na-imagem-para-bootstrap-kind.md
docs/evidences/: api-predict.md  compose.md  data-quality.md  kind-deploy.md  kind-rollback.md  mlflow-tracking.md  postgres-load.md  tests.md
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  ingest-job.yaml  kustomization.yaml  namespace.yaml  secret.yaml
scripts/: clean_outputs.py  dev.ps1
src/: config.py
src/api/: main.py  schemas.py
src/data/: cities.py  database.py  weather_repository.py
src/jobs/: ingest.py  load.py  transform.py
src/ml/: features.py  predict.py  train.py
src/quality/: checks.py
tests/integration/: test_load_repository.py
tests/quality/: test_checks.py
tests/unit/: test_cities.py  test_health.py  test_ingest.py  test_ml_features.py  test_train_predict.py  test_transform.py  (+1 more)
(+1 files in other folders)
