[project]
name = "weather-mlops-pipeline"
version = "0.1.0"
description = "Pipeline de dados climaticos com DevOps e MLOps usando Open-Meteo."
readme = "README.md"
requires-python = ">=3.11,<3.13"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "data",
    "mlruns",
    "models",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --tb=short"
testpaths = ["tests"]
pythonpath = ["."]

